compiling_error.txt
/home/doro/Documents/Learn/Advanced C++/Overloading the Assignent Operator.cpp: In member function ‘const Test& Test::operator=(const Test&) const’:
/home/doro/Documents/Learn/Advanced C++/Overloading the Assignent Operator.cpp:20:30: error: assignment of member ‘Test::id’ in read-only object
                   id = other.id;
                              ^~
/home/doro/Documents/Learn/Advanced C++/Overloading the Assignent Operator.cpp:21:32: error: passing ‘const string {aka const std::__cxx11::basic_string<char>}’ as ‘this’ argument discards qualifiers [-fpermissive]
                   name = other.name;
                                ^~~~
In file included from /usr/include/c++/7.3.1/string:52:0,
                 from /usr/include/c++/7.3.1/bits/locale_classes.h:40,
                 from /usr/include/c++/7.3.1/bits/ios_base.h:41,
                 from /usr/include/c++/7.3.1/ios:42,
                 from /usr/include/c++/7.3.1/ostream:38,
                 from /usr/include/c++/7.3.1/iostream:39,
                 from /home/doro/Documents/Learn/Advanced C++/Overloading the Assignent Operator.cpp:1:
/usr/include/c++/7.3.1/bits/basic_string.h:654:7: note:   in call to ‘std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]’
       operator=(const basic_string& __str)
       ^~~~~~~~
